--- a/demo/package.json
+++ b/demo/package.json
@@ -1,9 +1,9 @@
 {
   "name": "demo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "DemoApplication.java",
   "scripts": {
-    "start": "npm start",
+    "start": "npm install",
     "build": "npm run build"
   },
   "keywords": [],
